// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Recombee's addCartAddition destination action: all fields 1`] = `
Object {
  "additionalData": Object {
    "testType": "E$o]!yX^hLQ^46#)",
  },
  "amount": 34128252129771.52,
  "cascadeCreate": true,
  "itemId": "E$o]!yX^hLQ^46#)",
  "price": 1.1647375934332543e+27,
  "recommId": "E$o]!yX^hLQ^46#)",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "userId": "E$o]!yX^hLQ^46#)",
}
`;

exports[`Testing snapshot for Recombee's addCartAddition destination action: required fields 1`] = `
Object {
  "additionalData": Object {},
  "cascadeCreate": true,
  "itemId": "E$o]!yX^hLQ^46#)",
  "userId": "E$o]!yX^hLQ^46#)",
}
`;
